kubernetes/components/csi-block-storage-controller/base/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: csi-block-storage-controller
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
