kubernetes/components/csi-block-storage-controller/base/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: longhorn-ui
  namespace: csi-block-storage-controller
  annotations:
    # ExternalDNS configuration for Cloudflare
    external-dns.alpha.kubernetes.io/target: udm-pro.zimmermann.sh
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    kubernetes.io/ingress.class: traefik
    # Homepage Service Discovery
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "Kubernetes"
    gethomepage.dev/name: "Longhorn"
    gethomepage.dev/icon: "longhorn.png"
    gethomepage.dev/weight: "2"
    gethomepage.dev/href: "https://PLACEHOLDER"

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`PLACEHOLDER`)
      priority: 10
      middlewares:
        - name: chain-mfa-auth
          namespace: ingress-controller
      services:
        - kind: Service
          name: longhorn-frontend
          port: 80
  tls:
    secretName: longhorn-ui-tls
